# snowman

./: Cargo.toml  README.md  RELEASES
src/: main.rs
zsh/: README.md
zsh/spaceship-prompt/sections/: snowman.zsh
