[package]
name = "snowman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
config-file = "0.2.3"
dialoguer = { version = "0.10.4", features = ["fuzzy-matcher", "fuzzy-select"] }
home = "0.5.5"
reqwest = {version = "0.11.17", features = ["blocking"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
