[package]
edition = "2021"
license = "MIT"
name = "snowman"
repository = "https://github.com/PatOConnor43/snowman"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
config-file = "0.2.3"
dialoguer = { version = "0.10.4", features = ["fuzzy-matcher", "fuzzy-select"] }
home = "0.5.5"
reqwest = {version = "0.11.17", features = ["blocking"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]

[workspace.metadata.release]
allow-branch = ["master"]
publish = false
pre-release-commit-message = "Release version {{version}}"
